# App_Ipiranga

./: CMakeLists.txt  Diagramas.xmi  Makefile  README.md  erros  formregister.cpp  formregister.ui
Ipiranga_GUI/: Ipiranga.pro  _limitacoes.txt  adminpage.cpp  adminpage.h  adminpage.ui  formregister.cpp  formregister.h  formregister.ui  loginuser.cpp  loginuser.h  loginuser.ui  main.cpp  resources.qrc  userapp.cpp  userapp.h  userapp.ui
build-Ipiranga-Desktop-Debug/: Makefile  moc_ads.cpp  moc_adslayout.cpp  moc_advertise.cpp  moc_editprofile.cpp  moc_formregister.cpp  moc_friendslayout.cpp  moc_friendspage.cpp  moc_historic.cpp  moc_historiclayout.cpp  moc_historicpage.cpp  moc_initialpage.cpp  moc_loginuser.cpp  moc_searchads.cpp  moc_searchresult.cpp  moc_searchs.cpp  moc_serachfriends.cpp  moc_userapp.cpp  qrc_resources.cpp  ui_ads.h  ui_adslayout.h  ui_advertise.h  ui_editprofile.h  ui_formregister.h  ui_friendslayout.h  ui_friendspage.h  ui_historic.h  ui_historiclayout.h  ui_historicpage.h  ui_initialpage.h  ui_loginuser.h  ui_searchads.h  ui_searchresult.h  ui_searchs.h  ui_serachfriends.h  ui_userapp.h
build-Ipiranga-Desktop_Qt_5_9_0_GCC_64bit-Debug/: Makefile  moc_adminpage.cpp  moc_adslayout.cpp  moc_advertise.cpp  moc_editprofile.cpp  moc_formregister.cpp  moc_friendslayout.cpp  moc_friendspage.cpp  moc_historiclayout.cpp  moc_historicpage.cpp  moc_initialpage.cpp  moc_loginuser.cpp  moc_searchads.cpp  moc_searchresult.cpp  moc_serachfriends.cpp  moc_userapp.cpp  qrc_resources.cpp  ui_adminpage.h  ui_adslayout.h  ui_advertise.h  ui_editprofile.h  (+11 more)
(+345 files in other folders)
